[package]
name = "scienceum"
version = "0.1.0"
description = "Scienceum — a reactive notebook for symbolic & numeric math"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "scienceum"
path = "src/main.rs"
